// Copyright 2020-2021 Buf Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package buf.alpha.rpc.v1alpha1;

// Well defined error codes specified as part of the RPC API.
enum ErrorCode {
  ERROR_CODE_UNSPECIFIED = 0;
  ERROR_CODE_CANCELLED = 1;
  ERROR_CODE_UNKNOWN = 2;
  ERROR_CODE_INVALID_ARGUMENT = 3;
  ERROR_CODE_DEADLINE_EXCEEDED = 4;
  ERROR_CODE_NOT_FOUND = 5;
  ERROR_CODE_ALREADY_EXISTS = 6;
  ERROR_CODE_PERMISSION_DENIED = 7;
  ERROR_CODE_RESOURCE_EXHAUSTED = 8;
  ERROR_CODE_FAILED_PRECONDITION = 9;
  ERROR_CODE_ABORTED = 10;
  ERROR_CODE_OUT_OF_RANGE = 11;
  ERROR_CODE_UNIMPLEMENTED = 12;
  ERROR_CODE_INTERNAL = 13;
  ERROR_CODE_UNAVAILABLE = 14;
  ERROR_CODE_DATA_LOSS = 15;
  ERROR_CODE_UNAUTHENTICATED = 16;
}
